--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "glob": "^7.1.2",
+    "jquery-touchswipe": "^1.6.15",
     "js-yaml": "^3.9.1",
     "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
